blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  # Take a look at pods created and match the label app: client - the key and value are arbitrary
  selector:
    matchLabels:
      app: client
  # Describes the pod!
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: sjoedwards1/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
  # Maps to the label above
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
