blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  # Take a look at pods created and match the label app: event-bus - the key and value are arbitrary
  selector:
    matchLabels:
      app: event-bus
  # Describes the pod!
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: sjoedwards1/eventbus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
  # Maps to the label above
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
