blog/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  # Take a look at pods created and match the label app: posts - the key and value are arbitrary
  selector:
    matchLabels:
      app: posts
  # Describes the pod!
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: sjoedwards1/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
  # Maps to the label above
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
