blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
  # Basically says 'I've got routing rules for you'
    kubernetes.io/ingress.class: nginx
    # Lets us use regex in paths
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    # Should have changed the /etc/hosts to match this
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-srv
              servicePort: 4002
          # Our annotation lets us use this regex
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-srv
              servicePort: 4001
          # Match all other paths
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
